2006-07-25  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.15

2006-07-25  Johan Bilien <johan.bilien@nokia.com>

	Applied further fix to "Application switcher area does not immediately
	reflect the state of the application" (Closes NB#35604)
	* hildon-navigator/hn-app-button.c: Added method to force the update
	  of the button icon
	* hildon-navigator/hn-app-switcher.c: Force the update of the icon
	  when a change occurs in an entry structure

2006-07-25  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm-watched-window.c:
	  - manually top a hildon-app when coming out of hibernation
	  - various cleanups

2006-07-25  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Crash:When opening an application that was perviously BG
	killed and closed using the "x" in AS menu." (Closes NB#35605)
	* Remove a window from the hibernating hash-table if bg_killed app
	  is closed.

2006-07-24  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Application switcher area does not immediately reflect the
	tate of the application" (Closes NB#35604)
	* hildon-navigator/hn-app-switcher.c: New handler for the bg_kill
	  signal which updates the AS

2006-07-24  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Task launcher and task switcher shortcuts not working when
	home view is shown" (Closes NB#34328)
	* hildon-navigator/hn-keys.c: set the owner_events to False in
	  XGrabKey, to avoid GTK from handling the shortcuts inside
	  maemo-af-desktop

2006-07-21  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Fixed memory leak 
	  in loading of icon theme.
	* hildon-navigator/hn-wm-watchable-app.c: Fixed memory leak
          in failing of g_key_file_new(). (Closes NB#35577) 

2006-07-21  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Blinking icons do not stop blinking when topped from AS."
	(Closes NB#34349)
	* hildon-navigator/ hn-app-switcher.c: Let the WM tell us when to update